// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterView should render 1`] = `
<DocumentFragment>
  <div
    class="RouterView__Wrapper-sef01e-0"
    data-testid="RouterView__wrapper"
  >
    <h1>
      Test
    </h1>
  </div>
</DocumentFragment>
`;

exports[`RouterView should render with custom wrapper 1`] = `
<DocumentFragment>
  <section
    class="RouterView__Wrapper-sef01e-0"
    data-testid="RouterView__wrapper"
  >
    <h1>
      Test
    </h1>
  </section>
</DocumentFragment>
`;
